fix logo size and header spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Outfit:wght@100..900&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&display=swap");
 
 body {
@@ -15,7 +14,6 @@ body {
   background-color: var(--beige);
   font-size: 1.25rem;
   font-family: "Open Sans", Arial, sans-serif;
-  /* font-family: "Outfit", Arial, sans-serif; */
   margin: 0;
   padding: 0;
   height: 100%;
@@ -47,6 +45,10 @@ a {
   margin: 0;
   padding: 0;
   line-height: 0;
+  color: var(--navy-accent);
+}
+a:visited {
+  color: var(--slate);
 }
 
 button {
