--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,12 +3,13 @@
   background-size: cover;
   background-position: 50% 30%;
   transition-duration: 0.2s;
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
   padding: 10px 0;
   display: flex;
   justify-content: center;
+
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 #top-header a {
@@ -17,16 +18,19 @@
 }
 
 #top-header h1 {
+  --logo-size: 50px;
+
   border-left: 8px solid var(--sharp-orange);
   border-right: 8px solid var(--slate);
   border-radius: 6px;
-  font-family: "Bebas Neue", sans-serif;
-  font-size: 3rem;
-  color: var(--font-dark);
+  place-self: center;
+  align-content: center;
   margin: 0;
   padding: 0 5px;
-  place-self: center;
-  height: 3rem;
+  font-family: "Bebas Neue", sans-serif;
+  color: var(--font-dark);
+  font-size: var(--logo-size);
+  height: var(--logo-size);
 }
 
 nav {
@@ -45,18 +49,19 @@ nav {
 }
 
 #logo {
+  display: none;
   position: absolute;
   left: 20px;
-  font-family: "Bebas Neue", sans-serif;
-  font-size: 2rem;
   border-radius: 4px;
   border-left: 6px solid var(--font-silver);
   border-right: 6px solid var(--slate);
   height: 2.1rem;
   padding: 0 3px;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 2rem;
   color: var(--font-dark);
-  display: none;
 }
+
 #logo a {
   color: inherit;
   text-decoration: none;
@@ -71,8 +76,8 @@ nav ul {
 }
 
 .nav-list {
-  margin: 0 30px;
-  transition-duration: 0.2s;
+  margin: 0 50px;
+  transition-duration: 0.1s;
 }
 .nav-list:hover {
   transform: scale(1.1);
@@ -80,24 +85,15 @@ nav ul {
 
 .nav-link {
   color: var(--font-silver);
-  padding: 3px 10px;
-  border-radius: 5px;
-  color: inherit;
-  transition-duration: 0.2s;
+  padding: 0px 2px;
+  transition-duration: 0.1s;
   text-decoration: none;
 }
 .nav-link:hover {
-  background-color: var(--navy-accent);
-  box-shadow: 1px 1px 3px var(--navy-shadow);
+  border-bottom: 3px solid var(--font-silver);
 }
-.nav-link:active {
-  background-color: var(--navy-shadow);
-}
-
-@media (max-width: 1000px) {
-  .nav-list {
-    margin: 0 15px;
-  }
+.nav-link:visited {
+  color: var(--font-silver);
 }
 
 @media (max-width: 600px) {
@@ -106,12 +102,7 @@ nav ul {
   }
 
   nav {
-    font-size: 1.3rem;
-    /* padding: 10px 0; */
-  }
-
-  .nav-list {
-    margin: 0 10px;
+    font-size: 1.35rem;
   }
 
   #logo {
